[metadata]
name = boilerpy
version = attr: src.__version__
description = Boilerplate structure for python project
long_description = file: README.md, LICENSE
license = Apache Software License
keywords = python, boilerplate, project structure 
url = https://github.com/ademyanchuk/boilerpy
author = Alexey Demyanchuk
author_email = alexeydemyanchuk@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    tqdm
python_requires = >=3.7

# [options.entry_points]
# console_scripts =
#  Entry points goes here
#     script = src.script:main

[options.extras_require]
dev =
    pre-commit >= 2.14
    black >= 21.5b
    flake8 >= 3.9
    isort >= 5.9
    pytest >= 6.2
